--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="Enter City Name"  spellcheck="false">
+            <button><img src="images/search.png"></button>
+        </div>
+        <div class="weather">
+            <img src="images/rain.png" class="weather-icon">
+            <h1 class="temp">22°c</h1>
+            <h2 class="city">Tehran</h2>
+            <div class="details">
+                <div class="colmn">
+                    <img src="images/humidity.png">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+                <div class="colmn">
+                    <img src="images/wind.png">
+                    <div>
+                        <p class="wind">15 k/h</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
