--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <input type="text" placeholder="Enter City Name"  spellcheck="false">
             <button><img src="images/search.png"></button>
         </div>
+        <div class="error">
+            <p>wait minute :\ where the hell is this city</p>
+        </div>
         <div class="weather">
             <img src="images/rain.png" class="weather-icon">
             <h1 class="temp">22°c</h1>
@@ -35,6 +38,6 @@
             </div>
         </div>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
